# data-crawler-api

./: .gitignore  README.md  deploy.sh  pyproject.toml
prompt/: api-xd.md  api.md  deploy.md
src/: config.py  db.py  main.py
src/api/: routes.py  steam_api.py  xd_api.py
src/data_crawler_api/: __init__.py  config.py  db.py  main.py
src/data_crawler_api/api/: __init__.py  routes.py  steam_api.py
src/data_crawler_api/crawlers/: __init__.py  base.py
src/data_crawler_api/models/: schemas.py
src/models/: __init__.py  schemas.py
tests/: test_main.py
